--- a/notebooks/Extra_Run_CG.ipynb
+++ b/notebooks/Extra_Run_CG.ipynb
@@ -120,11 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PLot single cells\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "cell_label = 6\n",
     "fig, (ax, ax1) = plt.subplots(1,2,figsize = (14,6))\n",
@@ -1234,14 +1235,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load file\n",
-    "# import pickle\n",
-    "# pkl_file = open('Method-CG_only_first_constraint.pkl','rb')\n",
-    "# colonies = pickle.load(pkl_file)"
+    "import pickle\n",
+    "pkl_file = open('Nelder-Mead_v3_iter=60*400.pkl','rb')\n",
+    "colonies = pickle.load(pkl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<cell_describe.edge at 0x10e556ac8>,\n",
+       " <cell_describe.edge at 0x10e556470>,\n",
+       " <cell_describe.edge at 0x10e620c50>,\n",
+       " <cell_describe.edge at 0x10e620c88>,\n",
+       " <cell_describe.edge at 0x10e161dd8>,\n",
+       " <cell_describe.edge at 0x10e5f5dd8>,\n",
+       " <cell_describe.edge at 0x10e161e80>,\n",
+       " <cell_describe.edge at 0x10e161ef0>,\n",
+       " <cell_describe.edge at 0x10e161f98>,\n",
+       " <cell_describe.edge at 0x10e161d68>,\n",
+       " <cell_describe.edge at 0x109f79e48>,\n",
+       " <cell_describe.edge at 0x109f79dd8>,\n",
+       " <cell_describe.edge at 0x10e161cf8>,\n",
+       " <cell_describe.edge at 0x109f79f98>,\n",
+       " <cell_describe.edge at 0x109f79d30>,\n",
+       " <cell_describe.edge at 0x109f79c88>,\n",
+       " <cell_describe.edge at 0x109f79be0>,\n",
+       " <cell_describe.edge at 0x109f79b00>,\n",
+       " <cell_describe.edge at 0x109f796a0>,\n",
+       " <cell_describe.edge at 0x109f79630>,\n",
+       " <cell_describe.edge at 0x10e161c88>,\n",
+       " <cell_describe.edge at 0x109f79588>,\n",
+       " <cell_describe.edge at 0x109f794e0>,\n",
+       " <cell_describe.edge at 0x109f79470>,\n",
+       " <cell_describe.edge at 0x10e5f5a20>,\n",
+       " <cell_describe.edge at 0x109f79ef0>,\n",
+       " <cell_describe.edge at 0x109f79f60>,\n",
+       " <cell_describe.edge at 0x109f79f28>,\n",
+       " <cell_describe.edge at 0x10e459198>,\n",
+       " <cell_describe.edge at 0x10e459128>,\n",
+       " <cell_describe.edge at 0x10e4590b8>,\n",
+       " <cell_describe.edge at 0x10e459208>,\n",
+       " <cell_describe.edge at 0x10e4594e0>,\n",
+       " <cell_describe.edge at 0x10e4595f8>,\n",
+       " <cell_describe.edge at 0x10e459588>,\n",
+       " <cell_describe.edge at 0x109f79748>,\n",
+       " <cell_describe.edge at 0x109f79710>,\n",
+       " <cell_describe.edge at 0x10e459470>,\n",
+       " <cell_describe.edge at 0x10e459550>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colonies['1'].edges"
    ]
   },
   {
