More cookiecutter changes
1. Change cell_soap to DLITE
2. Change to setup.py
3. Change to some doc files

--- a/Notebooks/Demo_notebook_SurfaceEvolver.ipynb
+++ b/Notebooks/Demo_notebook_SurfaceEvolver.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.insert(0, '../cell_soap/')\n",
+    "sys.path.insert(0, '../DLITE/')\n",
     "from cell_describe import node, edge, cell, colony\n",
     "from ManualTracingMultiple import ManualTracingMultiple\n",
     "from SurfaceEvolver import SurfaceEvolver"
