--- a/Notebooks/FOV_drift.ipynb
+++ b/Notebooks/FOV_drift.ipynb
@@ -7,6 +7,10 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import pylab\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
     "from DLITE.SurfaceEvolver import SurfaceEvolver"
    ]
   },
@@ -531,36 +535,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'0': <DLITE.cell_describe.colony at 0x11c125f98>,\n",
-       " '1': <DLITE.cell_describe.colony at 0x11c125ef0>,\n",
-       " '2': <DLITE.cell_describe.colony at 0x11c125cc0>,\n",
-       " '3': <DLITE.cell_describe.colony at 0x11c125e80>,\n",
-       " '4': <DLITE.cell_describe.colony at 0x11c125d68>,\n",
-       " '5': <DLITE.cell_describe.colony at 0x11bd3c630>,\n",
-       " '6': <DLITE.cell_describe.colony at 0x11c125e48>,\n",
-       " '7': <DLITE.cell_describe.colony at 0x11c125f28>,\n",
-       " '8': <DLITE.cell_describe.colony at 0x11c125f60>,\n",
-       " '9': <DLITE.cell_describe.colony at 0x11c125e10>,\n",
-       " '10': <DLITE.cell_describe.colony at 0x11c125a58>}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "colonies"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -576,12 +550,7 @@
     }
    ],
    "source": [
-    "import pylab\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
+    "%matplotlib inline\n",
     "sns.set(style=\"white\")\n",
     "sns.set_context(\"paper\", font_scale = 2.5)\n",
     "\n",
