--- a/Notebooks/Demo_notebook_ZO-1.ipynb
+++ b/Notebooks/Demo_notebook_ZO-1.ipynb
@@ -130,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:905: LinAlgWarning: Ill-conditioned matrix (rcond=1.30265e-18): result may not be accurate.\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:908: LinAlgWarning: Ill-conditioned matrix (rcond=1.30265e-18): result may not be accurate.\n",
       "  x = linalg.solve(r2, y)  # Solve Rx=y\n"
      ]
     },
@@ -139,7 +139,7 @@
      "output_type": "stream",
      "text": [
       "Solver is CellFIT\n",
-      "First colony {'0': <DLITE.cell_describe.colony object at 0x114f417f0>}\n",
+      "First colony {'0': <DLITE.cell_describe.colony object at 0x11c84f6a0>}\n",
       "File 1 used a Cutoff value ------> 14\n",
       "node a = node b, possible topological change\n"
      ]
@@ -148,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:905: LinAlgWarning: Ill-conditioned matrix (rcond=3.6658e-20): result may not be accurate.\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:908: LinAlgWarning: Ill-conditioned matrix (rcond=3.6658e-20): result may not be accurate.\n",
       "  x = linalg.solve(r2, y)  # Solve Rx=y\n"
      ]
     },
@@ -164,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:905: LinAlgWarning: Ill-conditioned matrix (rcond=9.92725e-19): result may not be accurate.\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:908: LinAlgWarning: Ill-conditioned matrix (rcond=9.92725e-19): result may not be accurate.\n",
       "  x = linalg.solve(r2, y)  # Solve Rx=y\n"
      ]
     },
@@ -180,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:905: LinAlgWarning: Ill-conditioned matrix (rcond=2.85955e-18): result may not be accurate.\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:908: LinAlgWarning: Ill-conditioned matrix (rcond=2.85955e-18): result may not be accurate.\n",
       "  x = linalg.solve(r2, y)  # Solve Rx=y\n"
      ]
     },
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:905: LinAlgWarning: Ill-conditioned matrix (rcond=1.80949e-18): result may not be accurate.\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/cell_describe.py:908: LinAlgWarning: Ill-conditioned matrix (rcond=1.80949e-18): result may not be accurate.\n",
       "  x = linalg.solve(r2, y)  # Solve Rx=y\n"
      ]
     },
@@ -262,7 +262,6 @@
     }
    ],
    "source": [
-    "# %%prun\n",
     "colonies = ManualTracingMultipleInstance.main_computation_based_on_prev(timepoints, colonies = None, index = None, \n",
     "                                          old_dictionary = None, solver = 'CellFIT', maxiter = 60*1000)"
    ]
@@ -276,45 +275,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'0': <DLITE.cell_describe.colony at 0x114f417f0>,\n",
-       " '1': <DLITE.cell_describe.colony at 0x1030d68d0>,\n",
-       " '2': <DLITE.cell_describe.colony at 0x1152194a8>,\n",
-       " '3': <DLITE.cell_describe.colony at 0x114f640f0>,\n",
-       " '4': <DLITE.cell_describe.colony at 0x114e9dcc0>,\n",
-       " '5': <DLITE.cell_describe.colony at 0x114ee6898>,\n",
-       " '6': <DLITE.cell_describe.colony at 0x114f306a0>,\n",
-       " '7': <DLITE.cell_describe.colony at 0x114fbc668>,\n",
-       " '8': <DLITE.cell_describe.colony at 0x114e34630>,\n",
-       " '9': <DLITE.cell_describe.colony at 0x115009208>,\n",
-       " '10': <DLITE.cell_describe.colony at 0x1150e35f8>,\n",
-       " '11': <DLITE.cell_describe.colony at 0x1151304a8>,\n",
-       " '12': <DLITE.cell_describe.colony at 0x11517c198>,\n",
-       " '13': <DLITE.cell_describe.colony at 0x11518beb8>,\n",
-       " '14': <DLITE.cell_describe.colony at 0x115069be0>,\n",
-       " '15': <DLITE.cell_describe.colony at 0x1151ff978>,\n",
-       " '16': <DLITE.cell_describe.colony at 0x101e05438>,\n",
-       " '17': <DLITE.cell_describe.colony at 0x101e50438>,\n",
-       " '18': <DLITE.cell_describe.colony at 0x101e98128>,\n",
-       " '19': <DLITE.cell_describe.colony at 0x101eb1e80>,\n",
-       " '20': <DLITE.cell_describe.colony at 0x1192bfc18>,\n",
-       " '21': <DLITE.cell_describe.colony at 0x119308908>,\n",
-       " '22': <DLITE.cell_describe.colony at 0x11936f6d8>,\n",
-       " '23': <DLITE.cell_describe.colony at 0x1193b7400>,\n",
-       " '24': <DLITE.cell_describe.colony at 0x1193c8fd0>,\n",
-       " '25': <DLITE.cell_describe.colony at 0x114e68eb8>,\n",
-       " '26': <DLITE.cell_describe.colony at 0x119417cf8>,\n",
-       " '27': <DLITE.cell_describe.colony at 0x119462b38>,\n",
-       " '28': <DLITE.cell_describe.colony at 0x1194ad978>,\n",
-       " '29': <DLITE.cell_describe.colony at 0x11953e7b8>}"
+       "{'0': <DLITE.cell_describe.colony at 0x11c84f6a0>,\n",
+       " '1': <DLITE.cell_describe.colony at 0x10a737da0>,\n",
+       " '2': <DLITE.cell_describe.colony at 0x120948b38>,\n",
+       " '3': <DLITE.cell_describe.colony at 0x120995780>,\n",
+       " '4': <DLITE.cell_describe.colony at 0x1209da390>,\n",
+       " '5': <DLITE.cell_describe.colony at 0x120a0ef28>,\n",
+       " '6': <DLITE.cell_describe.colony at 0x120a57d30>,\n",
+       " '7': <DLITE.cell_describe.colony at 0x120a7ccf8>,\n",
+       " '8': <DLITE.cell_describe.colony at 0x11c89dcc0>,\n",
+       " '9': <DLITE.cell_describe.colony at 0x120af3cf8>,\n",
+       " '10': <DLITE.cell_describe.colony at 0x120b8bc88>,\n",
+       " '11': <DLITE.cell_describe.colony at 0x120bd8b38>,\n",
+       " '12': <DLITE.cell_describe.colony at 0x120c1e828>,\n",
+       " '13': <DLITE.cell_describe.colony at 0x120c67588>,\n",
+       " '14': <DLITE.cell_describe.colony at 0x120c882b0>,\n",
+       " '15': <DLITE.cell_describe.colony at 0x120c81fd0>,\n",
+       " '16': <DLITE.cell_describe.colony at 0x120d16d30>,\n",
+       " '17': <DLITE.cell_describe.colony at 0x120d34ac8>,\n",
+       " '18': <DLITE.cell_describe.colony at 0x120dc67b8>,\n",
+       " '19': <DLITE.cell_describe.colony at 0x120e0e550>,\n",
+       " '20': <DLITE.cell_describe.colony at 0x120e562e8>,\n",
+       " '21': <DLITE.cell_describe.colony at 0x120e77f98>,\n",
+       " '22': <DLITE.cell_describe.colony at 0x120eb1d68>,\n",
+       " '23': <DLITE.cell_describe.colony at 0x120efca90>,\n",
+       " '24': <DLITE.cell_describe.colony at 0x120f2df60>,\n",
+       " '25': <DLITE.cell_describe.colony at 0x120d94da0>,\n",
+       " '26': <DLITE.cell_describe.colony at 0x120f83c50>,\n",
+       " '27': <DLITE.cell_describe.colony at 0x120fcea90>,\n",
+       " '28': <DLITE.cell_describe.colony at 0x1210158d0>,\n",
+       " '29': <DLITE.cell_describe.colony at 0x1210cb710>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/PlottingFunctions.py:1351: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/PlottingFunctions.py:1352: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  cell_data['Pressures'].append([2*((c.pressure - min_pres) / float(max_pres - min_pres)) - 1 for c in v.cells if c.label == cell_lab][0])\n",
-      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/PlottingFunctions.py:1359: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "/Users/ritvikvasan/Documents/repos/DLITE/DLITE/PlottingFunctions.py:1360: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  - min_pres) / float(max_pres - min_pres))\n"
      ]
     }
@@ -403,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +420,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1195ba0b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1211be438>"
       ]
      },
      "execution_count": 12,
