better docs nbsphinx

--- a/docs/Demo_notebook_SurfaceEvolver.ipynb
+++ b/docs/Demo_notebook_SurfaceEvolver.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import general classes"
+    "The .txt files generated using the previous notebook can be run through Surface Evolver. Here, we will use the .txt file outputs of Surface Evolver as an input for DLITE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's import some general classes"
    ]
   },
   {
@@ -27,30 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import DLITE classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We import 8 classes -  node, edge, cell, colony, data, ManualTracing, ManualTracingMultiple, SurfaceEvolver\n",
-    "\n",
-    "Node defines (x,y) location of all edge-edge intersections\n",
-    "\n",
-    "Edge defines co-ordinates, directed curvature and end nodes of all cell-cell intersections\n",
-    "\n",
-    "Cell defines perimeter, area and all edges and nodes comprising a cycle of edges\n",
-    "\n",
-    "Colony defines all cells in a given image \n",
-    "\n",
-    "Data defines a colony from pickle file formats generated at AICS\n",
-    "\n",
-    "ManualTracing defines a colony from Manual tracing of images generated using NeuronJ \n",
-    "\n",
-    "ManualTracingMultiple defines colonies at multiple time points each of which is manually traced out using NeuronJ\n",
-    "\n",
-    "SurfaceEvolver defines colonies from multiple txt files generated from Surface Evolver "
+    "Now, we import DLITE classes"
    ]
   },
   {
@@ -69,15 +53,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the dataset"
+    "The main class we will be using here is the SurfaceEvolver class. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SurfaceEvolver can read txt files of the form (name_first + number + name_end). For example, name_first = 'voronoi_very_small_44_edges_tension_edges_20_30_', number = 0.9, name_end = '.fe.txt' is a txt file with the name \n",
-    "'voronoi_very_small_44_edges_tension_edges_20_30_0.9.fe.txt'. Here, we have 10 timepoints."
+    "SurfaceEvolver can read txt files of the form (name_first + number + name_end), where the number refers to the timepoint.\n",
+    "\n",
+    "For example, name_first = 'voronoi_very_small_44_edges_tension_edges_20_30_', number = 0.9, name_end = '.fe.txt' is a txt file with the name \n",
+    "'voronoi_very_small_44_edges_tension_edges_20_30_0.9.fe.txt'. \n",
+    "\n",
+    "Here, we have 7 timepoints."
    ]
   },
   {
@@ -113,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's instantiate the class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -125,14 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given timepoints and an instance of the SurfaceEvolver class, we can compute dynamic cell-cell forces and store it in a dictionary named colonies as follows"
+    "Now we can compute tensions! "
    ]
   },
   {
@@ -313,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have 7 colony classes for each time point"
+    "The output is a dictionary containing colonies at every time point"
    ]
   },
   {
@@ -346,20 +334,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Post processing"
+    "Now, we need to do a little post processing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to store all the information contained in colonies. We do this in 4 dataframes\n",
+    "We want to store all the information contained in every colony. We do this in 3 dataframes\n",
     "\n",
     "nodes_dataframe has node related information like tension residuals, numbers of connected edges, average curvature of connected edges etc. \n",
     "\n",
     "edges_dataframe has edge related information like edge tension, stochasticity in tension, edge curvature etc. \n",
     "\n",
     "cells_dataframe has cell related information like cell pressure, area, perimeter etc. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do this, let's import the PlottingFunctions class in DLITE"
    ]
   },
   {
@@ -384,6 +379,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call these functions to make the dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -402,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heatmaps"
+    "Once we have the dataframes, we can start plotting the results"
    ]
   },
   {
@@ -470,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Colony colormaps"
+    "We can also plot colony colormaps using something like this"
    ]
   },
   {
@@ -522,7 +524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tension movies"
+    "Movies are possible too. Just make sure you have ffmpeg installed"
    ]
   },
   {
