--- a/docs/Demo_notebook_ZO-1.ipynb
+++ b/docs/Demo_notebook_ZO-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import general classes"
+    "Now let's try running DLITE on the ZO-1 dataset. First, we import some general classes"
    ]
   },
   {
@@ -27,30 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import DLITE classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We import 8 classes -  node, edge, cell, colony, data, ManualTracing, ManualTracingMultiple, SurfaceEvolver\n",
-    "\n",
-    "Node defines (x,y) location of all edge-edge intersections\n",
-    "\n",
-    "Edge defines co-ordinates, directed curvature and end nodes of all cell-cell intersections\n",
-    "\n",
-    "Cell defines perimeter, area and all edges and nodes comprising a cycle of edges\n",
-    "\n",
-    "Colony defines all cells in a given image \n",
-    "\n",
-    "Data defines a colony from pickle file formats generated at AICS\n",
-    "\n",
-    "ManualTracing defines a colony from Manual tracing of images generated using NeuronJ \n",
-    "\n",
-    "ManualTracingMultiple defines colonies at multiple time points each of which is manually traced out using NeuronJ\n",
-    "\n",
-    "SurfaceEvolver defines colonies from multiple txt files generated from Surface Evolver "
+    "Then, DLITE classes"
    ]
   },
   {
@@ -69,15 +46,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the dataset"
+    "The main class we will be using here is the ManualTracingMultiple class"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ManualTracingMultiple can read txt files of the form (name_first + number + name_end). For example, name_first = 'MAX_20170123_I01_003-Scene-4-P4-split_T', number = 1, name_end = '.ome.txt' is a txt file with the name \n",
-    "'MAX_20170123_I01_003-Scene-4-P4-split_T1.ome.txt'. Here, we have 30 timepoints so we define number as an integer from 0 to 29."
+    "ManualTracingMultiple can read txt files of the form (name_first + number + name_end). \n",
+    "\n",
+    "For example, name_first = 'MAX_20170123_I01_003-Scene-4-P4-split_T', number = 1, name_end = '.ome.txt' is a txt file with the name \n",
+    "'MAX_20170123_I01_003-Scene-4-P4-split_T1.ome.txt'. \n",
+    "\n",
+    "Here, we have 30 timepoints so we define number as an integer from 0 to 29."
    ]
   },
   {
@@ -88,6 +69,13 @@
    "source": [
     "os.chdir(r'../Notebooks/data/ZO-1_data/Time-series_1')\n",
     "timepoints = [int(i) for i in np.linspace(0, 29, 30)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's instantiate the class"
    ]
   },
   {
@@ -104,14 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given timepoints and an instance of the ManualTracingMultiple class, we can compute dynamic cell-cell forces and store it in a dictionary named colonies as follows"
+    "Now, we can compute tensions! Here we'll specify the solver as 'CellFIT'"
    ]
   },
   {
@@ -270,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have 30 colony classes for each time point"
+    "This will give us 30 colony classes (for each time point)"
    ]
   },
   {
@@ -326,22 +307,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Post processing"
+    "Now, we need to do post processing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to store all the information contained in colonies. We do this in 4 dataframes\n",
-    "\n",
-    "nodes_dataframe has node related information like tension residuals, numbers of connected edges, average curvature of connected edges etc. \n",
-    "\n",
-    "edges_dataframe has edge related information like edge tension, stochasticity in tension, edge curvature etc. \n",
-    "\n",
-    "cells_dataframe has cell related information like cell pressure, area, perimeter etc. \n",
-    "\n",
-    "tensor_dataframe has colony related information like average strain rate, rotation, horizontal and vertical velocity etc."
+    "This is the same as before. We store all the information in 3 dataframes and we do this using the PlottingFunctions class in DLITE"
    ]
   },
   {
@@ -397,7 +370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heatmaps"
+    "Once we have the dataframes, we can start plotting the results!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a heatmap of dynamic edge tensions"
    ]
   },
   {
@@ -452,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Colony colormaps"
+    "Here's some colony colormaps at time points 0, 5, 10, 15 and 20"
    ]
   },
   {
@@ -504,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tension movies"
+    "As before, movies are also possible using something like this"
    ]
   },
   {
