--- a/docs/FOV_drift.ipynb
+++ b/docs/FOV_drift.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can also visualize how FOV drift can affect solutions in a single colony image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,6 +19,13 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from DLITE.SurfaceEvolver import SurfaceEvolver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use a single time-point of a the synthetic data time-series in Fig 2"
    ]
   },
   {
@@ -27,12 +41,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we instantiate the class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "SurfaceEvolverInstance = SurfaceEvolver(name_first, name_end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we call the FOV drift method of the SurfaceEvolver class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do this for both solvers so that we can compare results"
    ]
   },
   {
@@ -271,6 +306,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the colonies, we can visualize the colony tensions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -308,6 +350,11 @@
     "#     ax.set(xlim = [400,580], ylim = [400,580], aspect = 1)\n",
     "    ax.set(xlim = [200,800], ylim = [200,800], aspect = 1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -434,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tension movies"
+    "Tension movies"
    ]
   },
   {
