--- a/docs/Generate_Voronoi_Data.ipynb
+++ b/docs/Generate_Voronoi_Data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We import the lloyd_relaxation_class to generate a Voronoi diagram. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's instantiate this class with 6000 points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -30,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Voronoi dataset"
+    "Now we can generate a Voronoi diagram"
    ]
   },
   {
@@ -68,15 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Use Lloyd relaxation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will make Voronoi cells roughly equal in size"
+    "We want to try to make Voronoi cells roughly equal in size. Otherwise a single cell can be significantly larger than another."
    ]
   },
   {
@@ -123,7 +129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save file in Surface Evolver format"
+    "Now we can save this file in a format that is readable by Surface Evolver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do this using the SaveSurfEvolFile class in DLITE "
    ]
   },
   {
@@ -145,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we've saved the file in this directory. You can add a gogo3 function to the end of the .txt file using the command below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -152,6 +172,20 @@
    "source": [
     "savefile.add_gogo3(0.1, 30, 50)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will set the tension of all edges labelled 30-50 to 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
