--- a/docs/Compare_CellFIT_DLITE.ipynb
+++ b/docs/Compare_CellFIT_DLITE.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compare CellFIT DLITE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook, we will visualize how to compare results between two methods - in this case CellFIT and DLITE."
    ]
   },
