--- a/docs/Demo_notebook_SurfaceEvolver.ipynb
+++ b/docs/Demo_notebook_SurfaceEvolver.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Demo notebook Surface Evolver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The .txt files generated using the previous notebook can be run through Surface Evolver. Here, we will use the .txt file outputs of Surface Evolver as an input for DLITE"
    ]
   },
@@ -514,10 +521,7 @@
     "                      min_ten = 0, max_ten = 3, specify_color = 'jet',cbar = 'no', lw = 3)\n",
     "    plt.setp(ax.get_yticklabels(), visible=False)\n",
     "    plt.setp(ax.get_xticklabels(), visible=False)\n",
-    "    ax.set(xlim = [450,550], ylim = [430,540], aspect = 1)\n",
-    "\n",
-    "# pylab.savefig('geometry.pdf', bbox_inches = 'tight')\n",
-    "# pylab.savefig('geometry.svg', bbox_inches = 'tight')"
+    "    ax.set(xlim = [450,550], ylim = [430,540], aspect = 1)"
    ]
   },
   {
