--- a/docs/Demo_notebook_ZO-1.ipynb
+++ b/docs/Demo_notebook_ZO-1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Demo notebook ZO-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's try running DLITE on the ZO-1 dataset. First, we import some general classes"
    ]
   },
