--- a/docs/FOV_drift.ipynb
+++ b/docs/FOV_drift.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## FOV drift"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, we can also visualize how FOV drift can affect solutions in a single colony image"
    ]
   },
@@ -18,7 +25,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "from DLITE.SurfaceEvolver import SurfaceEvolver"
+    "from DLITE.SurfaceEvolver import SurfaceEvolver\n",
+    "from DLITE.PlottingFunctions import PlottingFunctions"
    ]
   },
   {
@@ -354,7 +362,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We can also plot heatmaps using the same functions described before"
+   ]
   },
   {
    "cell_type": "code",
@@ -362,7 +372,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DLITE.PlottingFunctions import PlottingFunctions\n",
     "PlottingFunctionsInstance = PlottingFunctions()"
    ]
   },
@@ -475,29 +484,6 @@
     "    sns.heatmap(df, ax=ax,\n",
     "                cbar=i == 0, vmin=0, vmax=3, cmap = 'jet',\n",
     "                cbar_ax=None if i else cbar_ax)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tension movies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.set(style=\"darkgrid\")\n",
-    "sns.set_context(\"talk\", font_scale=0.75)\n",
-    "\n",
-    "fig, ax = plt.subplots(1,1, figsize = (6,4))\n",
-    "\n",
-    "PlottingFunctionsInstance.plot_tensions(fig, ax, colonies2,min_x=200, max_x=800, min_y=200, max_y=800, \n",
-    "                                            min_ten=0,max_ten=3, specify_aspect=None,specify_color='jet' ,\n",
-    "                                            type=None, lw = 2)"
    ]
   },
   {
