--- a/docs/Generate_Voronoi_Data.ipynb
+++ b/docs/Generate_Voronoi_Data.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Demo notebook "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We import the lloyd_relaxation_class to generate a Voronoi diagram. "
    ]
   },
