minor title change

--- a/docs/Compare_CellFIT_DLITE.ipynb
+++ b/docs/Compare_CellFIT_DLITE.ipynb
@@ -694,8 +694,7 @@
     "    ax.set_title(title)\n",
     "    sns.heatmap(df, ax=ax,\n",
     "                cbar=i == 0, vmin=0, vmax=3, cmap = 'jet',\n",
-    "                cbar_ax=None if i else cbar_ax)\n",
-    "# pylab.savefig('heatmap.pdf', bbox_inches = 'tight')"
+    "                cbar_ax=None if i else cbar_ax)"
    ]
   },
   {
@@ -763,16 +762,8 @@
     "    ax.set_title(title)\n",
     "    sns.heatmap(df, ax=ax,\n",
     "                cbar=i == 0, vmin=-1, vmax=1, cmap = 'jet',\n",
-    "                cbar_ax=None if i else cbar_ax)\n",
-    "# pylab.savefig('heatmap.pdf', bbox_inches = 'tight')"
+    "                cbar_ax=None if i else cbar_ax)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
