--- a/docs/Demo_notebook_ZO-1.ipynb
+++ b/docs/Demo_notebook_ZO-1.ipynb
@@ -481,10 +481,7 @@
     "                      min_ten = 0, max_ten = 3, specify_color = 'jet',cbar = 'no', lw = 3)\n",
     "    plt.setp(ax.get_yticklabels(), visible=False)\n",
     "    plt.setp(ax.get_xticklabels(), visible=False)\n",
-    "    ax.set(xlim = [0,1000], ylim = [0,1000], aspect = 1)\n",
-    "\n",
-    "# pylab.savefig('geometry.pdf', bbox_inches = 'tight')\n",
-    "# pylab.savefig('geometry.svg', bbox_inches = 'tight')"
+    "    ax.set(xlim = [0,1000], ylim = [0,1000], aspect = 1)"
    ]
   },
   {
@@ -509,13 +506,6 @@
     "                                            min_ten=0,max_ten=3, specify_aspect=None,specify_color='jet' ,\n",
     "                                            type=None, lw = 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
