--- a/docs/Generate_Voronoi_Data.ipynb
+++ b/docs/Generate_Voronoi_Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo notebook "
+    "## Generate Voronoi colonies"
    ]
   },
   {
@@ -186,13 +186,6 @@
    "source": [
     "This will set the tension of all edges labelled 30-50 to 0.1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
