--- a/docs/synthetic_data/Generate_Voronoi_Colony_Mesh.ipynb
+++ b/docs/synthetic_data/Generate_Voronoi_Colony_Mesh.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Voronoi colonies"
+    "## Generate Voronoi colony mesh"
    ]
   },
   {
