--- a/docs/synthetic_data/SurfaceEvolver_Mesh_To_Force_Network.ipynb
+++ b/docs/synthetic_data/SurfaceEvolver_Mesh_To_Force_Network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo notebook Surface Evolver"
+    "## Convert SurfaceEvolver mesh to force network"
    ]
   },
   {
@@ -380,7 +380,6 @@
    "outputs": [],
    "source": [
     "# We first find labels of edges that are present in all the colonies\n",
-    "\n",
     "common_edge_labels = PlottingFunctionsInstance.get_repeat_edge(colonies)\n",
     "common_cell_labels = PlottingFunctionsInstance.get_repeat_cell(colonies)"
    ]
