--- a/docs/synthetic_data/Simulate_FOV_Drift.ipynb
+++ b/docs/synthetic_data/Simulate_FOV_Drift.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FOV drift"
+    "## Simulate FOV drift in a single colony"
    ]
   },
   {
