doc grammar edits

--- a/docs/ZO-1_data/ZO-1_Mesh_To_Force_Network.ipynb
+++ b/docs/ZO-1_data/ZO-1_Mesh_To_Force_Network.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's try running DLITE on the ZO-1 dataset. First, we import some general classes"
+    "First, we import some general classes"
    ]
   },
   {
